<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".MainActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="horizontal">

    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:orientation="vertical">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="@dimen/padding_team_name"
        android:text="@string/team_a"
        android:textColor="@android:color/black"
        android:textSize="@dimen/teams_title" />

      <TextView
        android:id="@+id/teamAScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_score"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/zero"
        android:textColor="@android:color/black"
        android:textSize="@dimen/score_number" />

      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addRunTeamA"
        android:text="@string/add_run"
        android:textColor="@color/colorWhite" />
    </LinearLayout>

    <View
      android:layout_width="@dimen/line_width"
      android:layout_height="match_parent"
      android:layout_margin="@dimen/line_margin"
      android:background="@android:color/darker_gray"></View>

    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:orientation="vertical">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="@dimen/padding_team_name"
        android:text="@string/team_b"
        android:textColor="@android:color/black"
        android:textSize="@dimen/teams_title" />

      <TextView
        android:id="@+id/teamBScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_score"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/zero"
        android:textColor="@android:color/black"
        android:textSize="@dimen/score_number" />

      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addRunTeamB"
        android:text="@string/add_run"
        android:textColor="@color/colorWhite" />
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center"
      android:orientation="vertical">

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/metrics_padding">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:gravity="center"
          android:text="@string/innings"
          android:textColor="@android:color/black" />

        <TextView
          android:id="@+id/innings_counter"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/default_inning"
          android:textColor="@android:color/black" />
      </LinearLayout>

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/metrics_padding">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/outs"
          android:textColor="@android:color/black" />

        <TextView
          android:id="@+id/outs_counter"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/zero"
          android:textColor="@android:color/black" />
      </LinearLayout>

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/metrics_padding">

        <TextView

          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/balls"
          android:textColor="@android:color/black" />

        <TextView
          android:id="@+id/balls_counter"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/zero"
          android:textColor="@android:color/black" />
      </LinearLayout>

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/metrics_padding">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/strikes"
          android:textColor="@android:color/black" />

        <TextView
          android:id="@+id/strikes_counter"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/zero"
          android:textColor="@android:color/black" />
      </LinearLayout>

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal">

      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addStrike"
        android:text="@string/add_strike"
        android:textColor="@color/colorWhite" />

      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addBall"
        android:text="@string/add_ball"
        android:textColor="@color/colorWhite" />

      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addOut"
        android:text="@string/add_out"
        android:textColor="@color/colorWhite" />
    </LinearLayout>

    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center">

      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="reset"
        android:text="@string/reset"
        android:textColor="@color/colorWhite" />
    </RelativeLayout>
  </LinearLayout>
</LinearLayout>
